modules/alb-sg/main.tf
resource "aws_security_group" "alb_sg" {
  name        = "${var.prefix_name}-alb-sg-${var.prefix_env}"
  description = "Allow HTTP and HTTPS from public internet"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.prefix_name}-alb-sg-${var.prefix_env}"
  }
}
